--- a/JobApplicationTracker.DataAccess/JobApplicationTracker.DataAccess.csproj
+++ b/JobApplicationTracker.DataAccess/JobApplicationTracker.DataAccess.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobApplicationTracker.Core\JobApplicationTracker.Core.csproj" />
+  </ItemGroup>
+
 </Project>
