--- a/JobApplicationTracker.Web/appsettings.json
+++ b/JobApplicationTracker.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=jobappdb;Trusted_Connection=True;"
+  }
 }
